--- a/src/app/basic-components/login/login.component.html
+++ b/src/app/basic-components/login/login.component.html
@@ -68,7 +68,7 @@
                         </div>
                         </div>
                         <div class="register-link m-t-15 text-center">
-                            <p class="acc-p">You already have not account? <a href="#"> Create New Account</a></p>
+                            <p class="acc-p">You already have not account? <a routerLink="/register"> Create New Account</a></p>
                         </div>
                     </form>
                 </div>
