--- a/src/app/basic-components/sidebar/sidebar.component.html
+++ b/src/app/basic-components/sidebar/sidebar.component.html
@@ -7,6 +7,11 @@
                       <a routerLink="/"><i class="menu-icon fa fa-laptop"></i>Dashboard </a>
                   </li>
                   <li class="menu-title">Modules</li><!-- /.menu-title -->
+
+                  <li>
+                        <a routerLink="/quotes"> <i class="menu-icon fa fa-money"></i>Quotes </a>
+                 </li>
+                 
                   <li>
                         <a routerLink="/products"> <i class="menu-icon  ti-gift"></i>Products </a>
                  </li>
@@ -15,9 +20,7 @@
                         <a routerLink="widgets.html"> <i class="menu-icon fa fa-building-o"></i>Invoices </a>
                  </li>
 
-                 <li>
-                        <a routerLink="widgets.html"> <i class="menu-icon fa fa-money"></i>Quotes </a>
-                 </li>
+                
                   
   
               </ul>
