--- a/src/app/modules/products/product-list/product-list.component.html
+++ b/src/app/modules/products/product-list/product-list.component.html
@@ -1,48 +1,89 @@
- 
 <div class="animated fadeIn">
-    <div class="row">
-
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-header">
-                    <strong class="card-title">Products</strong>
-                </div>
-                <div class="card-body">
-                    <table id="bootstrap-data-table" class="table table-striped table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Salary</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>$320,800</td>
-                            </tr>
-                            <tr>
-                                <td>Garrett Winters</td>
-                                <td>Accountant</td>
-                                <td>Tokyo</td>
-                                <td>$170,750</td>
-                            </tr>
-                            <tr>
-                                <td>Ashton Cox</td>
-                                <td>Junior Technical Author</td>
-                                <td>San Francisco</td>
-                                <td>$86,000</td>
-                            </tr>
-                            
-                        </tbody>
-                    </table>
+        <div class="row">
+     
+    
+    
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/ue0AB6J.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title mb-3">Card Image Title</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                    <div class="card-body">
+                    <button type="button" class="btn btn-outline-primary">Read More</button>
+                     
+                      <button type="button" class="btn btn-info pull-right"><small>Form</small> $890</button>
+                  </div>
                 </div>
             </div>
-        </div>
-
-
-    </div>
-</div><!-- .animated -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/hrS2McC.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title mb-3">Card Image Title</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+    
+                    <div class="card-body">
+                        <button type="button" class="btn btn-outline-primary">Read More</button>
+                          &nbsp;  &nbsp;  &nbsp;
+                          <button type="button" class="btn btn-info pull-right"><small>Form</small> $890</button>
+                      </div>
+    
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/MUBS4Gh.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title mb-3">Card Image Title</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+    
+                    <div class="card-body">
+                        <button type="button" class="btn btn-outline-primary">Read More</button>
+                          &nbsp;  &nbsp;  &nbsp;
+                          <button type="button" class="btn btn-info pull-right"><small>Form</small> $890</button>
+                      </div>
+    
+                </div>
+            </div>
+    
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/MUBS4Gh.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title mb-3">Card Image Title</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+    
+                    <div class="card-body">
+                        <button type="button" class="btn btn-outline-primary">Read More</button>
+                          &nbsp;  &nbsp;  &nbsp;
+                          <button type="button" class="btn btn-info pull-right"><small>Form</small> $890</button>
+                      </div>
+    
+                </div>
+            </div>
+    
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="https://i.imgur.com/ue0AB6J.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title mb-3">Card Image Title</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+    
+                    <div class="card-body">
+                        <button type="button" class="btn btn-outline-primary">Read More</button>
+                          &nbsp;  &nbsp;  &nbsp;
+                        <button type="button" class="btn btn-info pull-right"><small>Form</small> $890</button>
+                      </div>
+    
+                </div>
+            </div>
+    
+    
+        </div><!-- .row -->
+    </div><!-- .animated -->
