--- a/src/app/basic-components/sidebar/sidebar.component.html
+++ b/src/app/basic-components/sidebar/sidebar.component.html
@@ -9,15 +9,19 @@
                   <li class="menu-title">Modules</li><!-- /.menu-title -->
 
                   <li>
-                        <a routerLink="/quotes"> <i class="menu-icon fa fa-money"></i>Quotes </a>
+                        <a routerLink="/quotes"> <i class="menu-icon fa fa-money"></i>Booking </a>
                  </li>
                  
                   <li>
-                        <a routerLink="/products"> <i class="menu-icon  ti-gift"></i>Products </a>
+                        <a routerLink="/products"> <i class="menu-icon fa fa-suitcase"></i>Packages </a>
                  </li>
 
                  <li>
                         <a routerLink="widgets.html"> <i class="menu-icon fa fa-building-o"></i>Invoices </a>
+                 </li>
+
+                 <li>
+                        <a routerLink="widgets.html"> <i class="menu-icon fa fa-user"></i>Support </a>
                  </li>
 
                 
