--- a/src/app/modules/products/product-list/product-list.component.html
+++ b/src/app/modules/products/product-list/product-list.component.html
@@ -3,86 +3,24 @@
      
     
     
-            <div class="col-md-4">
+            <div class="col-md-4" *ngFor="let product of products">
                 <div class="card">
-                    <img class="card-img-top" src="https://i.imgur.com/ue0AB6J.png" alt="Card image cap">
+                    <img class="card-img-top" src="{{usSer.path}}{{product.imagepath}}" alt="Card image cap" style="height: 200px;">
                     <div class="card-body">
-                        <h4 class="card-title mb-3">Card Image Title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h4 class="card-title mb-3">{{product.name | slice:0:20}}</h4>
+                        <p class="card-text">
+                            {{product.description | slice:0:100}}
+                        </p>
                     </div>
                     <div class="card-body">
-                    <button type="button" class="btn btn-outline-primary">Read More</button>
+                    <a routerLink="detail/{{product.record}}" class="btn btn-outline-primary">Read More</a>
                      
-                      <button type="button" class="btn btn-info pull-right"><small>Form</small> $890</button>
+                      <button type="button" class="btn btn-info pull-right"><small>Form</small> ${{product.unit_price | number: '1.0-0'}}</button>
                   </div>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="https://i.imgur.com/hrS2McC.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title mb-3">Card Image Title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+            </div> 
     
-                    <div class="card-body">
-                        <button type="button" class="btn btn-outline-primary">Read More</button>
-                          &nbsp;  &nbsp;  &nbsp;
-                          <button type="button" class="btn btn-info pull-right"><small>Form</small> $890</button>
-                      </div>
-    
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="https://i.imgur.com/MUBS4Gh.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title mb-3">Card Image Title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-    
-                    <div class="card-body">
-                        <button type="button" class="btn btn-outline-primary">Read More</button>
-                          &nbsp;  &nbsp;  &nbsp;
-                          <button type="button" class="btn btn-info pull-right"><small>Form</small> $890</button>
-                      </div>
-    
-                </div>
-            </div>
-    
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="https://i.imgur.com/MUBS4Gh.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title mb-3">Card Image Title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-    
-                    <div class="card-body">
-                        <button type="button" class="btn btn-outline-primary">Read More</button>
-                          &nbsp;  &nbsp;  &nbsp;
-                          <button type="button" class="btn btn-info pull-right"><small>Form</small> $890</button>
-                      </div>
-    
-                </div>
-            </div>
-    
-            <div class="col-md-4">
-                <div class="card">
-                    <img class="card-img-top" src="https://i.imgur.com/ue0AB6J.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h4 class="card-title mb-3">Card Image Title</h4>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-    
-                    <div class="card-body">
-                        <button type="button" class="btn btn-outline-primary">Read More</button>
-                          &nbsp;  &nbsp;  &nbsp;
-                        <button type="button" class="btn btn-info pull-right"><small>Form</small> $890</button>
-                      </div>
-    
-                </div>
-            </div>
+            
     
     
         </div><!-- .row -->
