--- a/src/app/basic-components/home/home.component.html
+++ b/src/app/basic-components/home/home.component.html
@@ -11,8 +11,8 @@
                         </div>
                         <div class="stat-content">
                             <div class="text-left dib">
-                                <div class="stat-text">$<span class="count">23569</span></div>
-                                <div class="stat-heading">Revenue</div>
+                                <div class="stat-text"><span class="count">23569</span></div>
+                                <div class="stat-heading">Total Bookings</div>
                             </div>
                         </div>
                     </div>
@@ -25,12 +25,12 @@
                 <div class="card-body">
                     <div class="stat-widget-five">
                         <div class="stat-icon dib flat-color-2">
-                            <i class="pe-7s-cart"></i>
+                            <i class="pe-7s-gift"></i>
                         </div>
                         <div class="stat-content">
                             <div class="text-left dib">
                                 <div class="stat-text"><span class="count">3435</span></div>
-                                <div class="stat-heading">Sales</div>
+                                <div class="stat-heading">Packages</div>
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                         <div class="stat-content">
                             <div class="text-left dib">
                                 <div class="stat-text"><span class="count">349</span></div>
-                                <div class="stat-heading">Templates</div>
+                                <div class="stat-heading">Custom Packages</div>
                             </div>
                         </div>
                     </div>
@@ -61,12 +61,12 @@
                 <div class="card-body">
                     <div class="stat-widget-five">
                         <div class="stat-icon dib flat-color-4">
-                            <i class="pe-7s-users"></i>
+                            <i class="pe-7s-home"></i>
                         </div>
                         <div class="stat-content">
                             <div class="text-left dib">
                                 <div class="stat-text"><span class="count">2986</span></div>
-                                <div class="stat-heading">Clients</div>
+                                <div class="stat-heading">Hotels</div>
                             </div>
                         </div>
                     </div>
@@ -75,6 +75,77 @@
         </div>
     </div>
     <!-- /Widgets -->
+    <div class="clearfix"></div>
+
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <div class="mx-auto d-block">
+                        <img class="rounded-circle mx-auto d-block" src="assets/images/admin.jpg" alt="Card image cap">
+                        <h5 class="text-sm-center mt-2 mb-1">Steven Lee</h5>
+                        <div class="location text-sm-center"><i class="fa fa-map-marker"></i> California, United States</div>
+                    </div>
+                    <hr>
+                    <div class="card-text text-sm-center">
+                        <a href="#"><i class="fa fa-facebook pr-1"></i></a>
+                        <a href="#"><i class="fa fa-twitter pr-1"></i></a>
+                        <a href="#"><i class="fa fa-linkedin pr-1"></i></a>
+                        <a href="#"><i class="fa fa-pinterest pr-1"></i></a>
+                    </div>
+                </div>
+                <div class="card-footer bg-primary">
+                    <strong class="card-title mb-3">Create Standard Iteneary Qoute</strong>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="mx-auto d-block">
+                            <img class="rounded-circle mx-auto d-block" src="assets/images/admin.jpg" alt="Card image cap">
+                            <h5 class="text-sm-center mt-2 mb-1">Steven Lee</h5>
+                            <div class="location text-sm-center"><i class="fa fa-map-marker"></i> California, United States</div>
+                        </div>
+                        <hr>
+                        <div class="card-text text-sm-center">
+                            <a href="#"><i class="fa fa-facebook pr-1"></i></a>
+                            <a href="#"><i class="fa fa-twitter pr-1"></i></a>
+                            <a href="#"><i class="fa fa-linkedin pr-1"></i></a>
+                            <a href="#"><i class="fa fa-pinterest pr-1"></i></a>
+                        </div>
+                    </div>
+                    <div class="card-footer bg-primary">
+                        <strong class="card-title mb-3">Buy TDU Packages</strong>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="mx-auto d-block">
+                                <img class="rounded-circle mx-auto d-block" src="assets/images/admin.jpg" alt="Card image cap">
+                                <h5 class="text-sm-center mt-2 mb-1">Steven Lee</h5>
+                                <div class="location text-sm-center"><i class="fa fa-map-marker"></i> California, United States</div>
+                            </div>
+                            <hr>
+                            <div class="card-text text-sm-center">
+                                <a href="#"><i class="fa fa-facebook pr-1"></i></a>
+                                <a href="#"><i class="fa fa-twitter pr-1"></i></a>
+                                <a href="#"><i class="fa fa-linkedin pr-1"></i></a>
+                                <a href="#"><i class="fa fa-pinterest pr-1"></i></a>
+                            </div>
+                        </div>
+                        <div class="card-footer bg-primary">
+                            <strong class="card-title mb-3">Build Your Own Package</strong>
+                        </div>
+                    </div>
+                </div>
+
+                
+    </div>
      
     <div class="clearfix"></div>
     <!-- Orders -->
