--- a/src/app/basic-components/register/register.component.html
+++ b/src/app/basic-components/register/register.component.html
@@ -5,6 +5,7 @@
 <div class="sufee-login d-flex align-content-center flex-wrap">
     <div class="container">
         <div class="">
+                <br><br>
             <div class="login-logo">
                 <!-- <a href="index.html"> -->
                     <!-- <img class="align-content" src="images/logo.png" alt=""> -->
@@ -12,38 +13,61 @@
                 <!-- </a> -->
             </div>
             <div class="login-form">
-                <form>
+                <form #regForm="ngForm" (ngSubmit)="regForm.valid && createUser(regForm.value)" novalidate>
 
-                   
-                    <div class="form-group">
-                        <label>User Name</label>
-                        <input type="email" class="form-control" placeholder="User Name">
-                    </div>
-                    <div class="form-group">
-                        <label>Email address</label>
-                        <input type="email" class="form-control" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <label>Password</label>
-                        <input type="password" class="form-control" placeholder="Password">
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Agree the terms and policy
-                        </label>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Register</button>
-                    <div class="social-login-content">
-                        <div class="social-button">
-                            <button type="button" class="btn social facebook btn-flat btn-addon mb-3"><i class="ti-facebook"></i>Register with facebook</button>
-                            <button type="button" class="btn social twitter btn-flat btn-addon mt-2"><i class="ti-twitter"></i>Register with twitter</button>
+                   <div class="row"> 
+                       <div class="form-group col-md-6">
+                            <label>First Name</label>
+                            <input type="text" name="firstname" ngModel class="form-control" placeholder="First Name" required>
                         </div>
-                    </div>
+                        <div class="form-group col-md-6">
+                                <label>Last Name</label>
+                                <input type="text" name="lastname" ngModel class="form-control" placeholder="Last Name" required>
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label>Email</label>
+                            <input type="email" name="email" ngModel class="form-control" placeholder="Email" required>
+                        </div>
+                        <div class="form-group col-md-6">
+                                <label>Mobile Phone</label>
+                                <input type="number" name="mobile" ngModel class="form-control" placeholder="Mobile Phone" required>
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label>Home Phone</label>
+                            <input type="number" name="homephone" ngModel class="form-control" placeholder="Home Phone" >
+                        </div>
+                        <div class="form-group col-md-6">
+                                <label>Date of Birth</label>
+                                <input type="date" name="birthday" ngModel class="form-control" placeholder="Date of Birth" >
+                        </div>
+
+                        <div class="form-group col-md-4">
+                            <label>P.O. Box</label>
+                            <input type="number" name="mailingpobox" ngModel class="form-control" placeholder="P.O. Box" required >
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label>City</label>
+                            <input type="text" name="mailingcity" ngModel class="form-control" placeholder="City" required >
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label>Country</label>
+                            <input type="text" name="mailingcountry" ngModel class="form-control" placeholder="Country" required >
+                        </div>
+                   </div>
+                    
+                   
+                     
+                    <button type="submit" [disabled]="!regForm.valid" class="btn btn-primary btn-flat m-b-30 m-t-30">Register</button>
+                    
                     <div class="register-link m-t-15 text-center">
-                        <p>Already have account ? <a href="#"> Sign in</a></p>
+                        <p>Already have account ? <a routerLink="/login"> Sign in</a></p>
                     </div>
                 </form>
+                
             </div>
+            <br><br><br><br>
         </div>
     </div>
 </div>
