--- a/src/app/modules/quotes/quotes-detail/quotes-detail.component.html
+++ b/src/app/modules/quotes/quotes-detail/quotes-detail.component.html
@@ -1,3 +1,59 @@
-<p>
-  quotes-detail works!
-</p>
+<div class="animated fadeIn">
+
+  <div class="ui-typography">
+      <div class="row">
+          <div class="col-md-12">
+
+
+              <div class="card">
+                  <div class="card-header">
+                      <strong class="card-title" v-if="headerText">
+                          <i class="fa fa-money"></i>
+                        Quotes Details</strong>
+                  </div>
+
+                  <div class="card-body">
+
+                      <h4 class="pb-2 display-5"><strong>{{quote.subject}}</strong></h4>
+                    
+
+                    <div class="row">
+                        <div class="col-md-6">   
+                              <span><i class="fa fa-inr"></i> 200</span><br>
+                              <span><i class="fa fa-tachometer"></i> {{quote.quotestage}}</span><br> 
+                              <span><i class="fa fa-list-alt"></i> {{quote.terms_conditions}}</span><br>
+                              <span><i class="fa fa-clock-o"></i> {{quote.createdtime}}</span><br>
+ 
+                      </div>
+                      <div class="col-md-6">
+                            <h4> <i class="fa fa-map-marker"></i> Address</h4>
+                            <address class="mt-3"> 
+                                {{quote.bill_street}}<br>
+                                {{quote.bill_city}}<br>
+                                {{quote.bill_state}}<br>
+                                {{quote.bill_country}}<br> 
+                          </address>
+                      </div>
+                     
+                    </div>
+                    <br>
+
+
+                    <div class="clearfix"></div>
+   
+
+ 
+                    
+                    
+
+                    </div>
+                    </div>
+
+
+                    </div>
+                    </div>
+                    </div>
+
+
+
+            </div><!-- .animated -->
