--- a/src/app/basic-components/header/header.component.html
+++ b/src/app/basic-components/header/header.component.html
@@ -86,7 +86,7 @@
 
           <div class="user-area dropdown float-right">
               <a href="#" class="dropdown-toggle active" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <img class="user-avatar rounded-circle" src="assets/images/admin.jpg" alt="User Avatar">
+                  <img class="user-avatar rounded-circle" src="assets/images/user.png" alt="User Avatar">
               </a>
 
               <div class="user-menu dropdown-menu">
