--- a/src/app/modules/products/book-now/book-now.component.html
+++ b/src/app/modules/products/book-now/book-now.component.html
@@ -1,43 +1,77 @@
 
 
-<div class="row">
-  <div class="col-md-12">
-    <div class="card">
-      <div class="card-header">
-          <strong class="card-title">Basic Table</strong>
+    
+        <div class="card">
+          <div class="card-header">
+              <strong class="card-title">Booking</strong>
+          </div>
+          <div class="card-body">
+
+              <div class="row">
+                  <div class="col-md-6">
+                    
+                      <div class="card-body"> 
+                                  <div class="card-title">
+                                      <h3 class="text-center">{{details.title}}</h3>
+                                  </div>
+                                  <hr>
+                                  <form #bookFrm="ngForm" (ngSubmit)="quote(bookFrm.value)" novalidate="novalidate">
+
+                                      <div class="row">
+                                          <div class="col-6"> 
+                                                  <label for="cc-exp" class="control-label mb-1">Availble : {{details.avaible}}</label>                                                   
+                                          </div>
+                                          <div class="col-6">
+                                              <label for="cc-exp" class="control-label mb-1">Price : {{details.cost}}</label>
+                                          </div>
+                                      </div>
+                                      
+                                      <div class="form-group">
+                                          <label for="cc-payment" class="control-label mb-1">Persons</label>
+                                          <input type="number"  name="persons" #persons="ngModel"  [(ngModel)]="persn.person"    class="form-control" min="1" max="{{details.avaible}}"  >
+                                      </div>
+                                      
+                                     
+                                      <div>
+                                          <button id="payment-button" type="submit" class="btn btn-lg btn-info btn-block">
+                                              <i class="fa fa-lock fa-lg"></i>&nbsp;
+                                              <span id="payment-button-amount">Book</span>
+                                              <span id="payment-button-sending" style="display:none;">Sending…</span>
+                                          </button>
+                                      </div>
+                                  </form> 
+                      </div>
+
+
+
+
+                  </div>
+                  <div class="col-md-6">
+                      <div class="card-title">
+                          <h3 class="text-center">Table</h3>
+                      </div>
+                   <table class="table">
+                          <thead>
+                            <tr>
+                                <th scope="col">Persions</th> 
+                                <th>{{persn.person}}</th>
+                            </tr>
+                            <tr>
+                                <th scope="col">Tax</th> 
+                                <th>0</th>
+                            </tr>
+                            <tr>
+                                <th scope="col">Total</th> 
+                                <th>{{persn.person*details.cost}}</th>
+                            </tr>
+                        </thead> 
+                  </table>
+                    
+                  </div>
+              </div>
+
+
+              
       </div>
-      <div class="card-body">
-          <table class="table">
-              <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                </tr>
-            </thead>
-            <tbody>
-              <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-              </tr>
-              <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-              </tr>
-              <tr>
-                  <th scope="row">3</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-              </tr>
-          </tbody>
-      </table>
-  </div>
-</div>
-  </div>
-</div>
+    </div>
+  
