--- a/src/app/basic-components/page-not-found/page-not-found.component.html
+++ b/src/app/basic-components/page-not-found/page-not-found.component.html
@@ -1,26 +1,25 @@
 <!-- fa-bug -->
-
+<br><br><br>
 <div class="animated fadeIn">
-  <div class="row">
-
-    <div class="col-md-2"></div>
-
-      <div class="col-md-8">
-          <div class="card">
-              <div class="card-header">
-                  <strong class="card-title mb-3">Page Not Found</strong>
-              </div>
-              <div class="card-body">
-                  <div class="mx-auto d-block">
-                      <img class="rounded-circle mx-auto d-block" src="images/admin.jpg" alt="Card image cap">
-                      <h5 class="text-sm-center mt-2 mb-1">Steven Lee</h5>
-                      <div class="location text-sm-center"><i class="fa fa-map-marker"></i> California, United States</div>
-                  </div>
-                   
-              </div>
-          </div>
-      </div>
-      <div class="col-md-2"></div>
-      </div>
-      </div>
+        <div class="row">
       
+          <div class="col-md-2"></div>
+      
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header">
+                        <strong class="card-title mb-3">Page Not Found</strong>
+                    </div>
+                    <div class="card-body">
+                        <div class="mx-auto d-block">
+                         
+                           <img src="assets/images/site.png" alt="under development">
+                        </div>
+                         
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+            </div>
+            </div>
+      <br><br><br><br><br><br><br>   
