--- a/src/app/modules/quotes/quotes-detail/quotes-detail.component.html
+++ b/src/app/modules/quotes/quotes-detail/quotes-detail.component.html
@@ -26,8 +26,8 @@
 
                     <div class="row">
                         <div class="col-md-6">   
-                              <span><i class="fa fa-inr"></i> 200</span><br>
-                              <span><i class="fa fa-tachometer"></i> {{quote.quotestage}}</span><br> 
+                              <span><i class="fa fa-inr"></i> {{finalcal.preTaxTotal}}</span><br>
+                              <span class="badge badge-primary"><i class="fa fa-tachometer"></i> {{quote.quotestage}}</span><br> 
                               <span><i class="fa fa-list-alt"></i> {{quote.terms_conditions}}</span><br>
                               <span><i class="fa fa-clock-o"></i> {{quote.createdtime}}</span><br>
  
@@ -39,7 +39,9 @@
                                 {{quote.bill_city}}<br>
                                 {{quote.bill_state}}<br>
                                 {{quote.bill_country}}<br> 
-                          </address>
+                          </address> 
+
+                          
                       </div>
                      
                     </div>
