--- a/src/app/basic-components/login/login.component.html
+++ b/src/app/basic-components/login/login.component.html
@@ -45,7 +45,8 @@
                             </div> 
     
                             <div *ngIf="regStatus" class="alert alert-success" role="alert">
-                                    successfully your <b>Registration</b> created. for Login details Check your Mail inbox
+                                Your trial <b>subscription</b> has been created. Please check your Inbox and Spam/Junk folders for the login details
+                                  
                             </div>
     
                         <form #loginFrm="ngForm" (ngSubmit)="loginFrm.valid && loginUser(loginFrm)" novalidate>
