--- a/src/app/modules/quotes/quotes-list/quotes-list.component.html
+++ b/src/app/modules/quotes/quotes-list/quotes-list.component.html
@@ -1,6 +1,16 @@
 <div *ngIf="loder" style="text-align: center; margin-top: 200px;margin-bottom: 200px;">
     <div class="loader">Loading...</div>
    </div>
+   <div class="row">
+	<div class="col-md-4">
+		
+		<a routerLink="fixed-quote" class="btn btn-outline-primary">Fixed Package</a>
+	</div>
+	<div class="col-md-4">
+		
+		<a routerLink="detail/{{quotes.record}}" class="btn btn-outline-primary">Custom Package</a>
+	</div>
+   </div>
 
 
    <div class="row" *ngIf="!quotes" style=" margin-top: 100px;margin-bottom: 200px;">
