--- a/src/app/basic-components/login/login.component.html
+++ b/src/app/basic-components/login/login.component.html
@@ -48,7 +48,11 @@
                                 Your trial <b>subscription</b> has been created. Please check your Inbox and Spam/Junk folders for the login details
                                   
                             </div>
-    
+                            <div *ngIf="for_pass" class="alert alert-success" role="alert">
+                                    Please check your Inbox and Spam/Junk folders for the login details
+                                      
+                                </div>
+                            
                         <form #loginFrm="ngForm" (ngSubmit)="loginFrm.valid && loginUser(loginFrm)" novalidate>
                              <div class="form-group">
                                 <label>Welcome Back</label>
@@ -65,7 +69,7 @@
                             </div>
                             <div class="checkbox">                           
                                 <label class="pull-right">
-                                    <a href="#">Forgot Password?</a>
+                                    <a routerLink="/forgot-password">Forgot Password?</a>
                                 </label>
     
                             </div>
