--- a/src/app/basic-components/forgot-password/forgot-password.component.html
+++ b/src/app/basic-components/forgot-password/forgot-password.component.html
@@ -7,6 +7,7 @@
                 <div class="login-logo">
                     <a routerLink="/">
                         <!-- <img class="align-content" src="images/logo.png" alt=""> -->
+                        <!-- comment for git -->
                         <h1>TURTLE</h1>
                     </a>
                 </div>
