--- a/src/app/basic-components/sidebar/sidebar.component.html
+++ b/src/app/basic-components/sidebar/sidebar.component.html
@@ -17,15 +17,12 @@
                  </li>
 
                  <li>
-                        <a routerLink="widgets.html"> <i class="menu-icon fa fa-building-o"></i>Invoices </a>
+                        <a routerLink="/invoices"> <i class="menu-icon fa fa-building-o"></i>Invoices </a>
                  </li>
 
                  <li>
-                        <a routerLink="widgets.html"> <i class="menu-icon fa fa-user"></i>Support </a>
-                 </li>
-
-                
-                  
+                        <a routerLink="/tickets"> <i class="menu-icon fa fa-user"></i>Support </a>
+                 </li>           
   
               </ul>
           </div><!-- /.navbar-collapse -->
