--- a/src/app/modules/quotes/fixedquote/fixedquote.component.html
+++ b/src/app/modules/quotes/fixedquote/fixedquote.component.html
@@ -4,46 +4,56 @@
   <div class="card">
 
     <!-- Card header -->
-    <div class="card-header bg-primary" role="tab" id="headingTwo2">
+    <div class="card-header bg-primary" role="tab" id="headingTwo2" (click)="toggle();">
       <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2"
         aria-expanded="false" aria-controls="collapseTwo2">
         <h5 class="text-white pull-left">
           Choose Season </h5>
-          <i class="text-white ti-arrow-circle-down pull-right"></i>
-        
+          <i [class.ti-arrow-circle-down]="tog" [class.ti-arrow-circle-up]="!tog" class="text-white pull-right"></i>
       </a>
     </div>
 
     <!-- Card body -->
     <div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2"
-      data-parent="#accordionEx">
+      data-parent="#accordionEx" >
       <div class="card-body">
-        <div class="row">
+        <div class="form-group">
               <span class="col-lg-4"><input type="radio" name="seasontype" value="high" >
-              High Season(1st July to 21st Dec)
+             &nbsp;&nbsp;<label class=" form-control-label">High Season(1st July to 21st Dec)</label>
               </span>
 
               <span class="col-lg-4"><input type="radio" name="seasontype" value="low" >
-                Low Season(1st Jan to 30th Jun)
+                &nbsp;&nbsp; <label class=" form-control-label">Low Season(1st Jan to 30th Jun)</label>
               </span>
 
               <span class="col-lg-4"><input type="radio" name="seasontype" value="newyear" >
-              Christmas and New Year Eve
+                &nbsp;&nbsp; <label class=" form-control-label"> Christmas and New Year Eve</label>
               </span>
         </div>
       <div class="clearfix"></div>
-      <div class="row">
+      <div class="form-group">
         <span class="col-lg-4">
-          Date of Travel
+         <label class=" form-control-label">  Date of Travel </label>
+          <!--<mat-form-field>
+            <input matinput [matDatepicker]="dateoftravel">
+            <mat-datepicker-toggle [for]="dateoftravel" matSuffix></mat-datepicker-toggle>
+            <mat-datepicker #dateoftravel ></mat-datepicker>
+          </mat-form-field>-->
+          &nbsp;&nbsp; <input type="date" name="dateoftravel" />
         </span>
         <span class="col-lg-4">
-            No of Adults
+          <label class=" form-control-label">No of Adults</label>
+          &nbsp;&nbsp;  <input type="text" name="noofadults" />
           </span>
           <span class="col-lg-4">
-            No of Childs
+            <label class=" form-control-label">  No of Childs</label>
+            &nbsp;&nbsp;   <input type="text" name="noofchilds" />
             </span>
       </div>
       <div class="clearfix"></div>
+      <div class="form-group">
+        <button type="button" class="btn btn-primary pull-right">Next</button>
+      </div>
       </div>
     </div>
 
@@ -54,12 +64,13 @@
   <div class="card">
 
     <!-- Card header -->
-    <div class="card-header" role="tab" id="headingThree3">
+    <div class="card-header bg-primary" role="tab" id="headingThree3" (click)="toggle();">
       <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3"
         aria-expanded="false" aria-controls="collapseThree3">
-        <h5 class="mb-0">
-          Collapsible Group Item #3 <i class="ti-arrow-circle-down"></i>
+        <h5 class="mb-0 text-white pull-left">
+          Select itinerary
         </h5>
+        <i [class.ti-arrow-circle-down]="tog" [class.ti-arrow-circle-up]="!tog" class=" text-white pull-right" ></i>
       </a>
     </div>
 
@@ -67,13 +78,7 @@
     <div id="collapseThree3" class="collapse" role="tabpanel" aria-labelledby="headingThree3"
       data-parent="#accordionEx">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-        wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-        eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-        assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-        nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-        labore sustainable VHS.
+       <input type="checkbox" name="productid" /> Product 1
       </div>
     </div>
 
