--- a/src/app/modules/invoices/invoice-list/invoice-list.component.html
+++ b/src/app/modules/invoices/invoice-list/invoice-list.component.html
@@ -1,4 +1,27 @@
-ggggggggggggggg
-<p>
-  zxasdsx
-</p>
+<div class="col-lg-12">
+  <div class="card">
+      <div class="card-header">
+          <strong class="card-title">Invoice List</strong>
+      </div>
+      <div class="card-body">
+          <table class="table table-striped">
+              <thead>
+                  <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Invoice Name</th>
+                      <th scope="col">Date</th>
+                      <th scope="col">Bill City</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr><!--*ngFor="let inv of invoices"-->
+                      <th scope="row">1</th>
+                      <td>Sample invoice</td>
+                      <td>Otto</td>
+                      <td>@mdo</td>
+                  </tr>
+              </tbody>
+          </table>
+      </div>
+  </div>
+</div>
