--- a/src/app/basic-components/sidebar/sidebar.component.html
+++ b/src/app/basic-components/sidebar/sidebar.component.html
@@ -21,7 +21,7 @@
                  </li>
 
                  <li>
-                        <a routerLink="/tickets"> <i class="menu-icon fa fa-user"></i>Support </a>
+                        <a routerLink="/support"> <i class="menu-icon fa fa-user"></i>Support </a>
                  </li>           
   
               </ul>
